# rust-autograder-test-assignment

./: .gitignore
assignment/: Cargo.toml  coverage.sh
assignment/src/: solution.rs
assignment/tests/: unit.rs
submission/: Cargo.toml
submission/src/: solution.rs
submission/tests/: unit.rs
