[package]
name = "assignment"
version = "0.1.0"
authors = ["Ethan Brooks <ethanabrooks@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
array-macro = "1.0.4"
submission = { path = "../submission" }
